# parquet2csv

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  build-image.sh  build.sh  codeformat.sh  conf.sh  dev_local.sh
apt/: Dockerfile
listener/: CMakeLists.txt
listener/src/: listener_fifo.py  main.cc
reader/: CMakeLists.txt
reader/src/: OutputType.h  csv_dump_file.cc  csv_dump_file.h  ipc_dump_file.cc  ipc_dump_file.h  main.cc  parquet_read_file.cc  parquet_read_file.h  partition_config.cc  partition_config.h  streaming_socket.cc  streaming_socket.h
src/: main.cc  parquet_read_dp0.cc  parquet_read_dp0.h  partition_config.cc  partition_config.h  streaming_socket.cc  streaming_socket.h
